# wBeing

./: CMakeLists.txt  Makefile  README  README.md  main.cpp
source/: animal.cpp  animal.hpp  gui.cpp  gui.hpp  main.cpp  main.hpp  world.cpp  world.hpp
